synthesizers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IDENTIFIER

Grammar

Rule 0     S' -> instrument
Rule 1     instrument -> label COLON instrument_body
Rule 2     label -> LABEL
Rule 3     instrument_body -> parameter_list oscillator_list
Rule 4     parameter_list -> parameter parameter_list
Rule 5     parameter_list -> empty
Rule 6     parameter -> label COLON value
Rule 7     oscillator_list -> oscillator oscillator_list
Rule 8     oscillator_list -> empty
Rule 9     oscillator -> OSCILLATOR oscillator_body
Rule 10    oscillator_body -> parameter_list
Rule 11    value -> VALUE
Rule 12    empty -> <empty>

Terminals, with rules where they appear

COLON                : 1 6
IDENTIFIER           : 
LABEL                : 2
OSCILLATOR           : 9
VALUE                : 11
error                : 

Nonterminals, with rules where they appear

empty                : 5 8
instrument           : 0
instrument_body      : 1
label                : 1 6
oscillator           : 7
oscillator_body      : 9
oscillator_list      : 3 7
parameter            : 4
parameter_list       : 3 4 10
value                : 6

Parsing method: LALR

state 0

    (0) S' -> . instrument
    (1) instrument -> . label COLON instrument_body
    (2) label -> . LABEL

    LABEL           shift and go to state 3

    instrument                     shift and go to state 1
    label                          shift and go to state 2

state 1

    (0) S' -> instrument .



state 2

    (1) instrument -> label . COLON instrument_body

    COLON           shift and go to state 4


state 3

    (2) label -> LABEL .

    COLON           reduce using rule 2 (label -> LABEL .)


state 4

    (1) instrument -> label COLON . instrument_body
    (3) instrument_body -> . parameter_list oscillator_list
    (4) parameter_list -> . parameter parameter_list
    (5) parameter_list -> . empty
    (6) parameter -> . label COLON value
    (12) empty -> .
    (2) label -> . LABEL

    OSCILLATOR      reduce using rule 12 (empty -> .)
    $end            reduce using rule 12 (empty -> .)
    LABEL           shift and go to state 3

    label                          shift and go to state 5
    instrument_body                shift and go to state 6
    parameter_list                 shift and go to state 7
    parameter                      shift and go to state 8
    empty                          shift and go to state 9

state 5

    (6) parameter -> label . COLON value

    COLON           shift and go to state 10


state 6

    (1) instrument -> label COLON instrument_body .

    $end            reduce using rule 1 (instrument -> label COLON instrument_body .)


state 7

    (3) instrument_body -> parameter_list . oscillator_list
    (7) oscillator_list -> . oscillator oscillator_list
    (8) oscillator_list -> . empty
    (9) oscillator -> . OSCILLATOR oscillator_body
    (12) empty -> .

    OSCILLATOR      shift and go to state 14
    $end            reduce using rule 12 (empty -> .)

    oscillator_list                shift and go to state 11
    oscillator                     shift and go to state 12
    empty                          shift and go to state 13

state 8

    (4) parameter_list -> parameter . parameter_list
    (4) parameter_list -> . parameter parameter_list
    (5) parameter_list -> . empty
    (6) parameter -> . label COLON value
    (12) empty -> .
    (2) label -> . LABEL

    OSCILLATOR      reduce using rule 12 (empty -> .)
    $end            reduce using rule 12 (empty -> .)
    LABEL           shift and go to state 3

    parameter                      shift and go to state 8
    parameter_list                 shift and go to state 15
    empty                          shift and go to state 9
    label                          shift and go to state 5

state 9

    (5) parameter_list -> empty .

    OSCILLATOR      reduce using rule 5 (parameter_list -> empty .)
    $end            reduce using rule 5 (parameter_list -> empty .)


state 10

    (6) parameter -> label COLON . value
    (11) value -> . VALUE

    VALUE           shift and go to state 17

    value                          shift and go to state 16

state 11

    (3) instrument_body -> parameter_list oscillator_list .

    $end            reduce using rule 3 (instrument_body -> parameter_list oscillator_list .)


state 12

    (7) oscillator_list -> oscillator . oscillator_list
    (7) oscillator_list -> . oscillator oscillator_list
    (8) oscillator_list -> . empty
    (9) oscillator -> . OSCILLATOR oscillator_body
    (12) empty -> .

    OSCILLATOR      shift and go to state 14
    $end            reduce using rule 12 (empty -> .)

    oscillator                     shift and go to state 12
    oscillator_list                shift and go to state 18
    empty                          shift and go to state 13

state 13

    (8) oscillator_list -> empty .

    $end            reduce using rule 8 (oscillator_list -> empty .)


state 14

    (9) oscillator -> OSCILLATOR . oscillator_body
    (10) oscillator_body -> . parameter_list
    (4) parameter_list -> . parameter parameter_list
    (5) parameter_list -> . empty
    (6) parameter -> . label COLON value
    (12) empty -> .
    (2) label -> . LABEL

    OSCILLATOR      reduce using rule 12 (empty -> .)
    $end            reduce using rule 12 (empty -> .)
    LABEL           shift and go to state 3

    oscillator_body                shift and go to state 19
    parameter_list                 shift and go to state 20
    parameter                      shift and go to state 8
    empty                          shift and go to state 9
    label                          shift and go to state 5

state 15

    (4) parameter_list -> parameter parameter_list .

    OSCILLATOR      reduce using rule 4 (parameter_list -> parameter parameter_list .)
    $end            reduce using rule 4 (parameter_list -> parameter parameter_list .)


state 16

    (6) parameter -> label COLON value .

    LABEL           reduce using rule 6 (parameter -> label COLON value .)
    OSCILLATOR      reduce using rule 6 (parameter -> label COLON value .)
    $end            reduce using rule 6 (parameter -> label COLON value .)


state 17

    (11) value -> VALUE .

    LABEL           reduce using rule 11 (value -> VALUE .)
    OSCILLATOR      reduce using rule 11 (value -> VALUE .)
    $end            reduce using rule 11 (value -> VALUE .)


state 18

    (7) oscillator_list -> oscillator oscillator_list .

    $end            reduce using rule 7 (oscillator_list -> oscillator oscillator_list .)


state 19

    (9) oscillator -> OSCILLATOR oscillator_body .

    OSCILLATOR      reduce using rule 9 (oscillator -> OSCILLATOR oscillator_body .)
    $end            reduce using rule 9 (oscillator -> OSCILLATOR oscillator_body .)


state 20

    (10) oscillator_body -> parameter_list .

    OSCILLATOR      reduce using rule 10 (oscillator_body -> parameter_list .)
    $end            reduce using rule 10 (oscillator_body -> parameter_list .)

